--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uid": "^2.0.1"
   },
   "devDependencies": {
     "@types/next-redux-wrapper": "^3.0.0",
