--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.2.3",
     "next": "13.2.3",
+    "next-intl": "^2.11.0",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-use-websocket": "^4.3.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
