--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
     "lint": "next lint"
   },
   "dependencies": {
@@ -37,7 +39,11 @@
     "uid": "^2.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/next-redux-wrapper": "^3.0.0",
-    "@types/react-redux": "^7.1.25"
+    "@types/react-redux": "^7.1.25",
+    "jest": "^29.5.0"
   }
 }
