--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/redux-logger": "^3.0.9",
+    "babel-jest": "^29.5.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.2.3",
+    "jest-environment-jsdom": "^29.5.0",
     "next": "13.2.3",
     "next-intl": "^2.11.0",
     "next-redux-wrapper": "^8.1.0",
@@ -35,6 +37,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
+    "ts-jest": "^29.0.5",
     "typescript": "4.9.5",
     "uid": "^2.0.1"
   },
