--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.2.3",
-    "jest-environment-jsdom": "^29.5.0",
     "next": "13.2.3",
     "next-intl": "^2.11.0",
     "next-redux-wrapper": "^8.1.0",
@@ -47,6 +46,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/react-redux": "^7.1.25",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0"
   }
 }
